--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.1"
 
     defaultConfig {
-        applicationId "com.example.petfeecalculator"
+        applicationId "com.amiradanapetsitting.petfeecalculator"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
